<resources>
    <string name="app_name">Prakash Marble</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tiles">Tiles</string>
    <string name="menu_Marbles">Marbles</string>
    <string name="menu_Grani">Granites</string>
    <string name="menu_sani">Sanitary</string>
    <string name="menu_cp">Cp Fittings</string>
    <string name="menu_home">Home</string>
    <string name="menu_Cart">Cart</string>
    <string name="menu_order">My Orders</string>
    <string name="menu_Locat">Locate Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="filter_items">
        <item>All </item>
        <item>300X300</item>
        <item>300X450</item>
        <item>300X900</item>
        <item>250X375</item>
        <item>300X600</item>
        <item>200X600</item>
        <item>250X750</item>

    </string-array>
    <string-array name="filter_brands">
        <item>All </item>
        <item>AGL</item>
        <item>RAK</item>
    </string-array>
</resources>