<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_theme"
    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            >
<!--Menu items-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shop"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>
            <RelativeLayout
                android:id="@+id/rl_tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/tiles"
                    />

                <TextView
                    android:id="@+id/tv_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home"
                    android:padding="5dp"
                    android:text="Tiles"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_marbles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/marbles"
                    />

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home1"
                    android:padding="5dp"
                    android:text="Marbles"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_granite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/granite"
                    />

                <TextView
                    android:id="@+id/tv_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home3"
                    android:padding="5dp"
                    android:text="@string/menu_Grani"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_sanit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/sanitarywear"
                    />

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home4"
                    android:padding="5dp"
                    android:text="@string/menu_sani"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_cp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/cp_fittings"
                    />

                <TextView
                    android:id="@+id/tv_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home5"
                    android:padding="5dp"
                    android:text="@string/menu_cp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
            <!--Menu 2-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menu"
                android:textSize="15dp"
                android:textColor="@color/white"/>
            <RelativeLayout
                android:id="@+id/rl_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home6"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_home_24"
                    />

                <TextView
                    android:id="@+id/tv_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home6"
                    android:padding="5dp"
                    android:text="Home"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home7"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_shopping_cart_24"
                    />

                <TextView
                    android:id="@+id/tv_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home7"
                    android:padding="5dp"
                    android:text="Cart"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home8"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_bookmark_border_24"
                    />

                <TextView
                    android:id="@+id/tv_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home8"
                    android:padding="5dp"
                    android:text="My Orders"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_locate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_home9"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_location_on_24"
                    />

                <TextView
                    android:id="@+id/tv_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/img_home9"
                    android:padding="5dp"
                    android:text="Locate Us"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>
        </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="25dp"
        android:visibility="visible"
        android:textColor="@color/white"
        android:text="v: 1.0" />
</RelativeLayout>
</LinearLayout>
